# qat

./: CMakeLists.txt  README.md  qt.pro
QSQL/: CMakeLists.txt
QSQL/src/: SQLiteDriver.cpp
QatDataAnalysis/: CMakeLists.txt
QatDataAnalysis/QatDataAnalysis/: Attribute.h  Attribute.icc  AttributeList.h  AttributeList.icc  AttributeListConstLink.h  AttributeListLink.h  ClientSocket.h  ClientSocket.icc  ConstLink.h  Hist1D.h  Hist1D.icc  Hist1DMaker.h  Hist2D.h  Hist2D.icc  Hist2DMaker.h  HistSetMaker.h  HistogramManager.h  IODriver.h  IOLoader.h  Link.h  OptParse.h  OptParse.icc  Projection.h  QatUtils.h  Query.h  Query.icc  RCBase.h  RCSBase.h  Selection.h  ServerSocket.h  ServerSocket.icc  Socket.h  Socket.icc  Table.h  Table.icc  Tuple.h  Tuple.icc  TupleConstLink.h  TupleCut.h  TupleLink.h  (+6 more)
QatDataAnalysis/pkgconfig/: QatDataAnalysis.pc.in
QatDataAnalysis/qmakeconfig/: QatDataAnalysis.pc.in
QatDataAnalysis/src/: Attribute.cpp  AttributeList.cpp  ClientSocket.cpp  Hist1D.cpp  Hist1DMaker.cpp  Hist2D.cpp  Hist2DMaker.cpp  HistSetMaker.cpp  HistogramManager.cpp  IODriver.cpp  IOLoader.cpp  OptParse.cpp  Projection.cpp  QatUtils.cpp  RCBase.cpp  RCSBase.cpp  Selection.cpp  ServerSocket.cpp  Socket.cpp  Table.cpp  Tuple.cpp  TupleCut.cpp  TupleStore.cpp  ValueList.cpp  asymmetry.cpp  qt.pro
QatDataModeling/: CMakeLists.txt
QatDataModeling/Minuit2/: README
QatDataModeling/QatDataModeling/: ChiSq.h  HistChi2Functional.h  HistLikelihoodFunctional.h  MinuitMinimizer.h  ObjectiveFunction.h  TableLikelihoodFunctional.h  d506cm.inc  d506dp.inc
QatDataModeling/pkgconfig/: QatDataModeling.pc.in
QatDataModeling/qmakeconfig/: QatDataModeling.pc.in
QatDataModeling/src/: HistChi2Functional.cpp  HistLikelihoodFunctional.cpp  MinuitMinimizer.cpp  ObjectiveFunction.cpp  RecordMinimizer.cpp  TableLikelihoodFunctional.cpp  qt.pro
QatGenericFunctions/: CMakeLists.txt
QatGenericFunctions/QatGenericFunctions/: ACos.h  ACosh.h  ASin.h  ASinh.h  ATan.h  ATanh.h  Abs.h  Abs.icc  AbsFunction.h  AbsFunctional.h  AbsParameter.h  AdaptiveRKStepper.h  Airy.h  Airy.icc  Argument.h  ArgumentList.h  ArrayFunction.h  AssociatedLaguerrePolynomial.h  AssociatedLaguerrePolynomial.icc  AssociatedLegendre.h  AssociatedLegendre.icc  Bessel.h  Bessel.icc  BetaDistribution.h  ButcherTableau.h  ButcherTableau.icc  ClassicalSolver.h  ConstMinusFunction.h  ConstMinusParameter.h  ConstOverFunction.h  ConstOverParameter.h  ConstPlusFunction.h  ConstPlusParameter.h  ConstTimesFunction.h  ConstTimesParameter.h  Cos.h  Cosh.h  CubicSplinePolynomial.h  CumulativeChiSquare.h  CumulativeChiSquare.icc  (+76 more)
QatGenericFunctions/pkgconfig/: QatGenericFunctions.pc.in
QatGenericFunctions/qmakeconfig/: QatGenericFunctions.pc.in
QatGenericFunctions/src/: ACos.cpp  ACosh.cpp  ASin.cpp  ASinh.cpp  ATan.cpp  ATanh.cpp  AbsFunction.cpp  AbsFunctional.cpp  AbsParameter.cpp  AdaptiveRKStepper.cpp  ArrayFunction.cpp  BetaDistribution.cpp  ClassicalSolver.cpp  ConstMinusFunction.cpp  ConstMinusParameter.cpp  ConstOverFunction.cpp  ConstOverParameter.cpp  ConstPlusFunction.cpp  ConstPlusParameter.cpp  ConstTimesFunction.cpp  ConstTimesParameter.cpp  Cos.cpp  Cosh.cpp  CubicSplinePolynomial.cpp  EmbeddedRKStepper.cpp  Erf.cpp  Exp.cpp  FixedConstant.cpp  FunctionComposition.cpp  FunctionDifference.cpp  FunctionDirectProduct.cpp  FunctionNegation.cpp  FunctionNoop.cpp  FunctionNumDeriv.cpp  FunctionPlusParameter.cpp  FunctionProduct.cpp  FunctionQuotient.cpp  FunctionSum.cpp  FunctionTimesParameter.cpp  Gamma.cpp  (+39 more)
QatInventorWidgets/: CMakeLists.txt
QatInventorWidgets/QatInventorWidgets/: PolarFunctionView.h
QatInventorWidgets/pkgconfig/: QatInventorWidgets.pc.in
QatInventorWidgets/qmakeconfig/: QatInventorWidgets.pc.in
QatInventorWidgets/src/: PolarFunctionView.cpp  PolarFunctionView.ui  qt.pro
QatPlotWidgets/: CMakeLists.txt
QatPlotWidgets/QatPlotWidgets/: AbsRangeDivider.h  CharSelWidget.h  CustomRangeDivider.h  LabelEditorDialog.h  LinearRangeDivider.h  LinearSubdivider.h  LogRangeDivider.h  LogSubdivider.h  MultipleViewWidget.h  MultipleViewWindow.h  PVControl.h  ParameterDialog.h  PlotDirDialog.h  PlotFunction1DDialog.h  PlotHist1DDialog.h  PlotHist2DDialog.h  PlotOrbitDialog.h  PlotView.h  RangeDivision.h
QatPlotWidgets/pkgconfig/: QatPlotWidgets.pc.in
QatPlotWidgets/qmakeconfig/: QatPlotWidgets.pc.in
QatPlotWidgets/src/: AbsRangeDivider.cpp  CharSelWidget.cpp  CharSelWidget.ui  CustomRangeDivider.cpp  LabelEditorDialog.cpp  LabelEditorDialog.ui  LinearRangeDivider.cpp  LinearSubdivider.cpp  LogRangeDivider.cpp  LogSubdivider.cpp  MultipleViewWidget.cpp  MultipleViewWidget.ui  MultipleViewWindow.cpp  MultipleViewWindow.ui  PVControl.cpp  PVControl.ui  ParameterDialog.cpp  ParameterDialog.ui  PlotDirDialog.cpp  PlotDirDialog.ui  PlotFunction1DDialog.cpp  PlotHist1DDialog.cpp  PlotHist2DDialog.cpp  PlotOrbitDialog.cpp  PlotView.cpp  PlotWidgets.qrc  RangeDivision.cpp  qt.pro
QatPlotting/: CMakeLists.txt
QatPlotting/QatPlotting/: AbsPlotter.h  LinToLog.h  PRectF.h  PlotBand1D.h  PlotBand1DProperties.h  PlotBoxProperties.h  PlotErrorEllipse.h  PlotErrorEllipseProperties.h  PlotFunction1D.h  PlotFunction1D.icc  PlotFunction1DProperties.h  PlotHist1D.h  PlotHist1DProperties.h  PlotHist2D.h  PlotHist2DProperties.h  PlotKey.h  PlotMeasure.h  PlotMeasureProperties.h  PlotOrbit.h  PlotOrbit.icc  PlotOrbitProperties.h  PlotPoint.h  PlotPointProperties.h  PlotProfile.h  PlotProfileProperties.h  PlotRect.h  PlotRectProperties.h  PlotResidual1D.h  PlotResidual1DProperties.h  PlotShadeBox.h  PlotShadeBoxProperties.h  PlotStream.h  PlotText.h  PlotWave1D.h  PlotWave1DProperties.h  Plotable.h  RealArg.h  VisFunction.h  WPlotStream.h
QatPlotting/pkgconfig/: QatPlotting.pc.in
QatPlotting/qmakeconfig/: QatPlotting.pc.in
QatPlotting/src/: AbsPlotter.cpp  PlotBand1D.cpp  PlotErrorEllipse.cpp  PlotFunction1D.cpp  qt.pro  (+15 more)
QatProject/: CMakeLists.txt  QatProjectForm.cpp  QatProjectForm.h  qat-function  qat-function.in  qat-project.cpp  qat-project.ui  qt.pro  testprogram
Qhfd/: CMakeLists.txt
Qoot/: CMakeLists.txt
(+44 files in other folders)
